manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: meteor-shower
spec:
    selector:
        app: meteor-shower
    type: ClusterIP
    ports:
        - name: http
          protocol: TCP
          port: 3000
          targetPort: 3000
